update droneload usecase
